# btcx

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain  succinct.json
circuits/: consts.rs  header.rs  lib.rs  multi.rs  retarget.rs  utils.rs  vars.rs  verify.rs
circuits/builder/: header.rs  mod.rs  multi.rs
circuits/input/: mod.rs
contracts/: .env.example  .gitignore  .prettierrc.js  .solhint.json  .solhintignore  hardhat.config.ts  package.json
contracts/scripts/: encode.ts
contracts/scripts/helper/: array.ts  error.ts  null.ts
contracts/scripts/tasks/: index.ts
contracts/scripts/tasks/address/: predict.ts
contracts/scripts/tasks/btcx/: deploy.ts
contracts/scripts/tasks/contract/call/: encode.ts
contracts/scripts/tasks/contract/selector/: list.ts
contracts/scripts/tasks/deployer/: info.ts
contracts/scripts/tasks/submitters/evm/: deploy.ts
contracts/scripts/tasks/submitters/succinct/: deploy.ts  request.ts
contracts/scripts/utils/: attach.ts  deploy.ts  deployer.ts  format.ts  operation.ts  string.ts
contracts/src/: BTCX.sol
contracts/src/interfaces/: IBTCX.sol  ILightClient.sol  IVerifier.sol
contracts/src/submitters/evm/: EVMSubmitter.sol
contracts/src/submitters/evm/interfaces/: IBlockVerifier.sol  (+1 more)
contracts/src/submitters/succinct/: SuccinctSubmitter.sol
contracts/src/verifiers/evm/: EVMVerifier.sol
contracts/src/verifiers/succinct/: SuccinctVerifier.sol
contracts/test/: BTCX.ts  EVMVerifier.ts  gen-fixture.ts
contracts/test/fixtures/: headers-0-2015.json  headers-201600-211600.json
(+11 files in other folders)
